--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #DATABASE CREDENTIALS
-DB_URL = jdbc:postgresql://localhost:5432/clark
-DB_USER = postgres
-DB_PASS = root
+DB_URL = jdbc:postgresql://host:port/database
+DB_USER = your_user
+DB_PASS = your_pass
