feat: adds project to JitPack, for better control version

--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>DB Connection Utility</name>
   <description>Project provides utility methods for managing database connections and resources.</description>
+  
+  <dependencies>
+  	<dependency>
+    	<groupId>com.github.devMRibeiro</groupId>
+    	<artifactId>db-connection-manager</artifactId>
+    	<version>v1.0.0</version>
+	</dependency>
+  </dependencies>
+  
+  <repositories>
+	<repository>
+    	<id>jitpack.io</id>
+    	<url>https://jitpack.io</url>
+  	</repository>
+  </repositories>
 </project>
